Revert "fix: enhance modal style on mobile"
This reverts commit 8b1845c744dc12fee7bdd2c111fd1fce472b05dd.

--- a/src/Campaigns/Blocks/shared/components/ModalForm/styles.scss
+++ b/src/Campaigns/Blocks/shared/components/ModalForm/styles.scss
@@ -2,15 +2,7 @@
     outline: none;
     width: 100%;
     padding: 1rem;
-    max-height: 90dvh;
-    position: fixed;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-
-    @at-root body:has(&) {
-        position: relative;
-    }
+    overflow-y: scroll;
 
     &[data-entering="true"] {
         animation: modal-fade 300ms, modal-zoom 600ms;
@@ -37,18 +29,17 @@
     }
 
     &__overlay {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
-        height: 100%;
+        height: var(--visual-viewport-height);
         background: rgba(0 0 0 / .7);
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         z-index: 100;
-        overflow: hidden;
 
         &[data-loading="true"] {
             display: none;
@@ -78,9 +69,9 @@
 
     &__close {
         display: flex;
-        position: absolute;
-        top: var(--givewp-spacing-2);
-        right: var(--givewp-spacing-2);
+        position: fixed;
+        top: 25px;
+        right: 25px;
         padding: .75rem;
         width: fit-content;
         background: #e7e8ed;
@@ -100,9 +91,14 @@
             background-color: darken(#e7e8ed, 10%);
         }
     }
+}
 
-    &__dialog {
-        max-height: inherit;
-        overflow-y: auto;
+// Account for admin bar
+.admin-bar {
+    .givewp-donation-form-modal {
+        margin-top: 32px;
+        &__close {
+            top: calc(32px + 25px);
+        }
     }
 }
